Fix spacing for narrow view

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -85,6 +85,11 @@
       display: flex;
     }
 
+    .TagCategory-locked {
+      width: 100%;
+      justify-content: space-between;
+    }
+
     .TagCategory-icon,
     .TagCategory-stats,
     .TagCategory-locked,
